<resources>
    <string name="app_name">free</string>
    <string name="notification_channel_notice">noticechannel</string>
    <string name="notification_channel_event">eventchannel</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_personal">나의 폴더</string>
    <string name="menu_dashboard">대시 보드</string>
    <string name="menu_team">팀 URLS</string>
    <string name="menu_inject">Inject</string>
    <string name="alpha">alpha</string>
    <string name="beta">beta</string>
    <string name="search_hint">태그를 입력해주세요</string>
    <string name="menu_open">오픈 프로토콜</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="git_lab_address">https://lab.ssafy.com/s05-final/S05P31B201</string>
    <string name="menu_notification">공지사항</string>
</resources>